[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eiav2"
version = "0.0.1"
authors = [
  { name="Matt Brigida" },
]
description = "A function to pull data from version 2 of the EIA's API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Matt-Brigida/eiav2"
"Bug Tracker" = "https://github.com/Matt-Brigida/eiav2/issues"